250808 23:39 이재빈 리스트 수정중

--- a/webapp/assets/css/myPageNormal/normalMark.css
+++ b/webapp/assets/css/myPageNormal/normalMark.css
@@ -17,11 +17,10 @@ main {
   flex-direction: column;
 }
 
-.main_sidebar img {
+.main_sidebar ul li img {
   height: 150px;
   width: 150px;
   border-radius: 100%;
-  margin: 15px;
 }
 
 .main_sidebar ul li {
@@ -40,7 +39,7 @@ main {
   margin: 30px;
 }
 form{
-  flex: 1;
+  width: 100%;
 }
 .mark_nav{
   display: flex;
@@ -51,41 +50,52 @@ form{
   border-top: 1px solid black;
   border-bottom: 1px solid black;
 }
-.mark_nav div{
+.mark_nav ul{
   display: flex;
-  flex: 1;
 }
 
-.mark_nav div div{
+.mark_nav ul li{
+  display: flex;
   justify-content: center;
+  align-items: center;
 }
 .mark_nav input{
   margin: 0px 30px;
   width: 30px;
   height: 30px;
 }
+.name div{
+  width: 100px;
+  text-align: center;
+}
+.location div {
+  width: 1000px;
+  text-align: center;
+}
+.phone div {
+  width: 200px;
+  text-align: center;
+}
 
-.mark_list{
+.mark_list {
   display: flex;
   margin: 0px 150px;
   height: 50px;
   align-items: center;
-  background-color: rgb(223, 235, 235);
+  background-color: rgb(214, 236, 236);
   border-bottom: 1px solid black;
 }
-.mark_list a{
+.mark_list ul {
   display: flex;
-  flex: 1;
-}
-.mark_list a div{
-  display: flex;
-  flex: 1;
-}
-.mark_list div div{
-  justify-content: center;
 }
 
-.mark_list input{
+.mark_list ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mark_list input {
   margin: 0px 30px;
   width: 30px;
   height: 30px;
