--- a/webapp/assets/css/myPageCare/careMessage.css
+++ b/webapp/assets/css/myPageCare/careMessage.css
@@ -118,7 +118,9 @@ button {
 
 
 
-.modal_bg {
+
+
+.modal_bg .modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -131,16 +133,14 @@ button {
   z-index: 500;
 }
 
+
 .modal_box {
   background-color: white;
-  width: 650px;
-  padding: 25px;
+  width: 500px;
+  padding: 30px;
   border-radius: 10px;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 20px rgba(0,0,0,0.2);
   position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
 }
 
 .modal_read {
@@ -153,6 +153,24 @@ button {
   font-size: 18px;
 }
 
+.modal-content {
+  position: fixed;
+  top: 60%;
+}
+
+.modal_bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
 .modal_close {
   font-size: 24px;
   cursor: pointer;
@@ -162,12 +180,7 @@ button {
   font-size: 14px;
   color: #333;
 }
-
-.sender_info strong {
-  color: #000;
-}
-
-.sender_id {
+.sender_info strong .sender_id {
   font-weight: 500;
 }
 
@@ -181,29 +194,90 @@ button {
   white-space: pre-line;
 }
 
-.modal_button {
+.modal_button .confirm_buttons {
   display: flex;
   justify-content: center;
-  width: 500px;
   align-items: center;
-  text-align: center;
   gap: 20px;
+  margin-top: 20px;
 }
-
+.confirm_buttons {
+  margin-top: 0;  
+}
 .btn_reply {
   background-color: navy;
   color: white;
   border: none;
   border-radius: 5px;
   font-size: 14px;
+  padding: 10px 20px;
   cursor: pointer;
 }
 
-.btn_delete {
+.btn_delete .btn_cancel {
   background-color: white;
   color: red;
   border: 1px solid red;
   border-radius: 5px;
+  font-size: 14px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  display: flex;
+}
+
+.btn_confirm {
+  background-color: #2f4db1;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 40px;
+  border: 1px solid #ccc;
+  width: 400px;
+  border-radius: 20px;
+  text-align: center;
+  position: relative;
+}
+
+.modal-content button {
+  margin-top: 20px;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 10px;
+  background-color: #001860;
+  color: white;
+  cursor: pointer;
+}
+
+#sendMsgModal .btn_send {
+  background-color: #0011a8;
+  color: white;
+  padding: 10px 24px;
+  border-radius: 8px;
+  border: none;
+  font-weight: bold;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+#sendMsgModal .btn_cancel {
+  background-color: white;
+  color: red;
+  padding: 10px 24px;
+  border: 1px solid red;
+  border-radius: 8px;
+  font-weight: bold;
   font-size: 14px;
   cursor: pointer;
 }
