--- a/webapp/assets/css/myPageNormal/normalMatching.css
+++ b/webapp/assets/css/myPageNormal/normalMatching.css
@@ -17,12 +17,10 @@ main {
   flex-direction: column;
 }
 
-.main_sidebar img {
+.main_sidebar ul li img {
   height: 150px;
   width: 150px;
-  background-color: rgb(27, 255, 217);
   border-radius: 100%;
-  margin: 15px;
 }
 
 .main_sidebar ul li {
@@ -41,7 +39,7 @@ main {
   margin: 30px;
 }
 form{
-  margin: 50px 30px;
+  margin: 50px 200px;
   border: 1px solid black;
   border-radius: 15px;
   background-color: bisque;
@@ -54,7 +52,7 @@ form{
 .month ul{
   display: flex;
   justify-content: space-around;
-  margin-top: 15px;
+  margin-top: 20px;
 }
 .month ul li{
   list-style-type: none;
@@ -73,7 +71,10 @@ form{
   justify-content: space-between;
 }
 .matching ul li div{
-  margin: 0px 20px;
+  margin: 0px 40px;
+}
+.matching ul li .matchingbutton{
+  margin-right: 100px;
 }
 .matching ul li button{
   height: 50px;
