--- a/webapp/assets/css/myPageNormal/normalPoint.css
+++ b/webapp/assets/css/myPageNormal/normalPoint.css
@@ -17,7 +17,7 @@ main {
   flex-direction: column;
 }
 
-.main_sidebar ul li img{
+.main_sidebar ul li img {
   height: 150px;
   width: 150px;
   border-radius: 100%;
@@ -126,4 +126,33 @@ form{
 .point_use .month{
   display: flex;
   flex-direction: column;
+}
+
+.point_use .month ul{
+  display: flex;
+}
+.point_use .month ul li{
+  margin: 10px;
+}
+.point_use .point_total_use{
+  border: 1px solid black;
+  border-radius: 15px;
+  width: 350px;
+  height: 270px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.point_month{
+  margin: 10px;
+  border-radius: 15px;
+}
+.point_day{
+  border: 1px solid black;
+  border-radius: 15px;
+  width: 300px;
+  height: 200px;
+}
+.point_day ul li{
+  margin: 20px;
 }
