--- a/webapp/assets/css/myPageNormal/normalQuit.css
+++ b/webapp/assets/css/myPageNormal/normalQuit.css
@@ -17,12 +17,10 @@ main {
   flex-direction: column;
 }
 
-.main_sidebar img{
+.main_sidebar ul li img {
   height: 150px;
   width: 150px;
-  background-color: rgb(27, 255, 217);
   border-radius: 100%;
-  margin: 15px;
 }
 
 .main_sidebar ul li {
@@ -75,8 +73,7 @@ main {
 form{
   display: flex;
   flex-direction: column;
-  margin: 60px 300px;
-  justify-content: space-between;
+  margin: 100px 300px 0px 300px;
 }
 
 .quit_box{
@@ -85,11 +82,36 @@ form{
   background-color: bisque;
   font-size: 20px;
   display: flex;
-  flex: 1;
   flex-direction: column;
+  height: 200px;
+}
+.quit_day{
+  display: flex;
+  flex: 1;
+}
+.quit_text{
+  height: 100px;
+  width: 200px;
+  justify-content: center;
+  align-items: center;
+}
+.quit_day div{
+  justify-content: center;
+  align-items: center;
+}
+.quit_reason{
+  display: flex;
+}
+.quit_reason div{
+  display: flex;
 }
 
 button{
-  justify-content: end;
+  height: 50px;
   width: 100px;
+  background-color: blue;
+  color: white;
+  border-radius: 15px;
+  font-size: 20px;
+  margin-top: 30px;
 }
