--- a/webapp/assets/css/admin/sidebar.css
+++ b/webapp/assets/css/admin/sidebar.css
@@ -1,9 +1,9 @@
-#sidebar{
-  border-right:1px solid black;
-  width:200px;
+#sidebar {
+  border-right: 1px solid black;
+  width: 200px;
   height: calc(100vh - 220px);
   position: absolute;
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
 
 .blank {
@@ -11,53 +11,54 @@
   height: 30px;
 }
 
-.sidebar >  ul {
+.sidebar > ul {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   list-style-type: none;
-     background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
- 
-.sidebar > ul > a > li, .sidebar > ul > div > li {
+
+.sidebar > ul > a > li,
+.sidebar > ul > div > li {
   width: 100%;
   height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
-
-
 }
 
-ul> a >li:hover {
-  background-color: #2F52AA;
+ul > a > li:hover {
+  background-color: #2f52aa;
   opacity: 0.5;
 }
 
-ul> div > li:hover {
-  background-color: #2F52AA;
+ul > div > li:hover {
+  background-color: #2f52aa;
   opacity: 0.5;
 }
- 
+
 .sidebar > ul > .board > ul {
   display: none;
 }
 
-.sidebar > ul > .board  {
+.sidebar > ul > .board {
   position: relative;
 }
 
 .sidebar > ul > .board:hover > ul {
+  z-index: 3;
   display: block;
   position: absolute;
-  top: 0;         
-  left: 100%;     
+  top: 0;
+  left: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   height: 140%;
+  background-color: white;
 }
 
 .sidebar > ul > .board:hover > ul > a {
@@ -75,5 +76,5 @@ ul> div > li:hover {
 }
 
 .side_menu {
-  border : 1px solid black;
+  border: 1px solid black;
 }
