250809 14:16 이재빈 게시판  중

--- a/webapp/assets/css/myPageNormal/normalQuit.css
+++ b/webapp/assets/css/myPageNormal/normalQuit.css
@@ -73,7 +73,7 @@ main {
 form{
   display: flex;
   flex-direction: column;
-  margin: 100px 300px 0px 300px;
+  margin: 100px 250px 0px 250px;
 }
 
 .quit_box{
@@ -87,15 +87,18 @@ form{
 }
 .quit_day{
   display: flex;
-  flex: 1;
+  border-bottom: 1px solid black;
 }
 .quit_text{
   height: 100px;
   width: 200px;
-  justify-content: center;
-  align-items: center;
+  border-right: 1px solid black;
+}
+.quit_today{
+  margin-left: 20px;
 }
 .quit_day div{
+  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -104,6 +107,16 @@ form{
 }
 .quit_reason div{
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.quit_reason input{
+  width: 400px;
+  height: 50px;
+  font-size: 20px;
+  margin-left: 20px;
+  border: 1px solid black;
+  border-radius: 15px;
 }
 
 button{
