--- a/webapp/assets/css/myPageNormal/normalModify.css
+++ b/webapp/assets/css/myPageNormal/normalModify.css
@@ -42,7 +42,7 @@ main {
 }
 form{
   flex: 1;
-  margin: 30px;
+  margin: 10px 150px;
 }
 .arlim{
   background-color: blueviolet;
@@ -70,18 +70,44 @@ form .normalmodify{
   background-color: beige;
   border: 1px solid black;
 }
-form .normalmodify div{
+.member{
+  border-bottom: 1px solid black;
+}
+.member ul{
   display: flex;
-  margin: 0px;
-  background-color: rgb(255, 172, 46);
-  height: 50px;
 }
-
-form .normalmodify div div{
-  margin-right: 50px;
+.info{
+  display: flex;
+  width: 200px;
+  height: auto;
+  justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  font-size: 20px;
+  border-right: 1px solid black;
+  background-color: aqua;
+  padding: 5px 0px;
 }
-form .normalmodify div nav ul li{
-  list-style-type: none;
+.myinfo {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin-left: 20px;
+}
+.myinfo ul{
+  display: flex;
+  flex-direction: column;
+}
+input{
+  width: 400px;
+  height: 40px;
+  font-size: 20px;
+  margin: 5px 0px;
+}
+button{
+  margin: 10px;
+  background-color: blue;
+  color: white;
+  width: 100px;
+  height: 30px;
+  border-radius: 15px;
 }
