--- a/webapp/assets/css/myPageCare/careMark.css
+++ b/webapp/assets/css/myPageCare/careMark.css
@@ -1,8 +1,14 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'pretendard-regular';
 }
-
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
 header, footer {
   width: 100%;
   height: 110px;
@@ -14,7 +20,14 @@ main {
   height: calc(100vh - 200px);
   display: flex;
 }
-
+.sidebar img {
+  height: 130px;
+  width: 130px;
+  background-color: #ff80ab;
+  border-radius: 50%;
+  margin: 0 auto 20px;
+  display: block;
+}
 .main_sidebar{
   width: 180px;
   height: 100%;
