--- a/webapp/assets/css/myPageCare/careMatching.css
+++ b/webapp/assets/css/myPageCare/careMatching.css
@@ -3,26 +3,35 @@
   padding: 0;
   font-family: 'pretendard-regular';
 }
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
+
 header,
 footer {
   width: 100%;
   height: 110px;
   background-color: bisque;
 }
-
+.sidebar img {
+  height: 130px;
+  width: 130px;
+  background-color: #ff80ab;
+  border-radius: 50%;
+  margin: 0 auto 20px;
+  display: block;
+}
 main {
   width: 100%;
   height: calc(100vh - 200px);
   display: flex;
 }
 
-.main_sidebar {
+.sidebar {
   width: 180px;
   height: 100%;
   background-color: rgb(159, 159, 255);
@@ -30,7 +39,7 @@ main {
   flex-direction: column;
 }
 
-.main_sidebar div {
+.sidebar div {
   height: 150px;
   width: 150px;
   background-color: rgb(27, 255, 217);
@@ -38,23 +47,24 @@ main {
   margin: 15px;
 }
 
-.main_sidebar ul li {
+.sidebar ul li {
   padding: 15px;
 }
 
 
-.div_mark{
-  background-color:olive;
+.div_mark {
+  background-color: olive;
   flex: 1;
   color: white;
 }
 
-.div_mark .title{
+.div_mark .title {
   background-color: gainsboro;
   font-size: 30px;
   margin-top: 30px;
 }
-.matching_month{
+
+.matching_month {
   background-color: pink;
   width: 70%;
   margin: 0 auto;
@@ -63,7 +73,8 @@ main {
   border-radius: 30px;
   border: solid 5px black;
 }
-.months{
+
+.months {
   margin-top: 20px;
   display: flex;
   justify-content: space-around;
@@ -71,29 +82,68 @@ main {
   background-color: aqua;
   padding-bottom: 10px;
 }
-.matching_month ul li{
+
+.matching_month ul li {
   list-style-type: none;
   background-color: blueviolet;
 }
+
 .matching {
   display: flex;
+  margin-top: 5px;
 }
-.matching_day{
-  width: 50px;
+
+.matching_day {
+  width: 180px;
   text-align: center;
 }
-.matching_member{
-  width: 50px;
+
+.matching_member {
+  width: 180px;
   text-align: center;
 }
-.matching_time{
-  width: 50px;
+
+.matching_time {
+  width: 180px;
   text-align: center;
 }
-.matching_point{
-  width: 50px;
+
+.matching_point {
+  width: 180px;
   text-align: center;
 }
+
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.page ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.page ul li {
+  margin: 10px;
+}
+
+.div_add {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.div_add button {
+  background-color: #2F52AA;
+  width: 200px;
+  height: 60px;
+  color: white;
+  margin-top: 15px;
+  cursor: pointer;
+  border-radius: 15px;
+}
+
 /*
 -----------------------------
 .post_edit {
