--- a/webapp/assets/css/myPageCare/careMessage.css
+++ b/webapp/assets/css/myPageCare/careMessage.css
@@ -19,7 +19,14 @@ main {
   display: flex;
   min-height: calc(100vh - 220px);
 }
-
+.sidebar img {
+  height: 130px;
+  width: 130px;
+  background-color: #ff80ab;
+  border-radius: 50%;
+  margin: 0 auto 20px;
+  display: block;
+}
 .sidebar {
   width: 180px;
   background-color: #2f4db1;
