--- a/webapp/assets/css/myPageCare/carePointreturn.css
+++ b/webapp/assets/css/myPageCare/carePointreturn.css
@@ -18,7 +18,14 @@ footer {
   height: 110px;
   background-color: black;
 }
-
+.sidebar img {
+  height: 130px;
+  width: 130px;
+  background-color: #ff80ab;
+  border-radius: 50%;
+  margin: 0 auto 20px;
+  display: block;
+}
 main {
   display: flex;
   min-height: calc(100vh - 220px);
