--- a/webapp/assets/css/restaurant/restaurantDetail.css
+++ b/webapp/assets/css/restaurant/restaurantDetail.css
@@ -31,17 +31,16 @@ main{
   font-size: 30px;
 }
 .context{
-  margin-top: 60px;
-  background-color: gray;
+  margin-top: 40px;
+  /* background-color: gray; */
   display: flex;
   height: 510px;
   width: 1200px;
 }
 .detail_info_area{
-  background-color: yellow;
+  /* background-color: yellow; */
   width: 50%;
   display: flex;
-  align-items: center;
   flex-direction: column;
 }
 .restaurant_img_box{
@@ -56,11 +55,20 @@ main{
   height: 100%;
 }
 .restaurant_info{
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
   width: 80%;
+  display: flex;
+  flex-direction: column;
+  flex:1;
+}
+.short_info{
+  /* background-color: aqua; */
+  flex: 1;
+  margin: 0 10px; 
 }
 .restaurant_introduction{
-  background-color: gray;
+  /* background-color: gray; */
+  background-color: #EFEFEF;
   width: 100%;
   overflow: hidden;
   border: solid 3px black;
