--- a/webapp/assets/css/header.css
+++ b/webapp/assets/css/header.css
@@ -1,50 +1,61 @@
-.site_header,
-.site_header_login
+#site_header,
+#site_header_login
 {
   background-color: #FFF8EF;
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-.site_header div span a img,
-.site_header_login div span a img
+#site_header div span a img,
+#site_header_login div span a img
 {
   height: 60px;
 }
-.site_header div,
-.site_header_login div
+#site_header div,
+#site_header_login div
 {
   height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.site_header div span a,
-.site_header_login div span a
+#site_header div span a,
+#site_header_login div span a
 {
   font-size: 16px;
   margin-right: 7px;
 }
-.site_header nav,
-.site_header_login nav
+#site_header nav,
+#site_header_login nav
 {
   background-color: #1D3266;
 }
-.site_header nav ul,
-.site_header_login nav ul
+#site_header nav ul,
+#site_header_login nav ul
 {
   display: flex;
   justify-content:space-around;
 }
-.site_header nav ul li div a,
-.site_header_login nav ul li div a
+#site_header nav ul li div a,
+#site_header_login nav ul li div a
 {
   text-decoration-line: none;
   color: white;
 }
-.site_header nav ul li div,
-.site_header_login nav ul li div
+#site_header nav ul li div,
+#site_header_login nav ul li div
 {
   height: 50px;
 }
-
+/* 관리자 헤더용 설정 */
+#site_header div span,
+#site_header_login div span{
+  display: flex;
+}
+#admin_text
+{
+  /* background-color: aqua; */
+  height: 100%;
+  font-size: 20px;
+  margin-left: 30px;
+} 
