--- a/webapp/assets/css/modal/modalCareAllowReject.css
+++ b/webapp/assets/css/modal/modalCareAllowReject.css
@@ -23,6 +23,7 @@
   /* background-color: aquamarine; */
   display: flex;
   justify-content: end;
+  width: 100%;
 }
 .modal_x{
   height: 100%;
@@ -35,6 +36,7 @@
   /* background-color: fuchsia; */
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 #modal_text{
   font-size: 20px;
@@ -68,6 +70,59 @@
   margin: 9px;
 }
 .modal_confirm_showup{
-  width: 100px;
+  width: 100%;
   height: 50px;
+  background-color: aqua;
+  text-align: center;
+}
+
+/* 변경된 이름을 입력하세요 */
+#new_name{
+  margin-top: 20px;
+  width: 200px;
+  height: 20px;
+  border: solid 2px black;
+  border-radius: 5px;
+  padding: 0 10px;
+}
+/* 포인트 내역 확인 */
+.log_window{
+  margin-top: 20px;
+  width: 400px;
+  height: 500px;
+  border: solid 2px #1D3266;
+  border-radius: 15px;
+}
+.select_month{
+  margin : 20px 0 20px 0;
+  display: flex;
+  background-color: aqua;
+  justify-content: center;
+}
+#previous_month, #next_month{
+  text-align:center;
+  background-color: pink;
+  flex: 1;
+}
+#point_year, #point_month{
+  margin: 0 2px;
+  background-color: aliceblue;
+}
+#point_log_list{
+  background-color: burlywood;
+}
+.point_log{
+  margin: 4px 30px;
+  background-color: skyblue;
+  border-bottom: solid 2px black;
+  padding: 5px 0;
+}
+/* 돌봄회원 가입/정보수정 신청 반려 */
+#reason_reject{
+  margin-top: 20px;
+  width: 350px;
+  height: 60px;
+  border: solid 2px black;
+  border-radius: 5px;
+  padding: 0 10px;
 }
