--- a/webapp/assets/css/restaurant/restaurantDetail.css
+++ b/webapp/assets/css/restaurant/restaurantDetail.css
@@ -25,7 +25,7 @@ main{
   width: 1200px;
   height: 100%;
 }
-.page_title{
+#page_title{
   margin-top: 40px;
   /* background-color: yellowgreen; */
   font-size: 30px;
@@ -50,7 +50,7 @@ main{
   border: solid 3px black;
   border-radius: 20px;
 }
-.restaurant_img{
+#restaurant_img{
   width: 100%;
   height: 100%;
 }
@@ -75,11 +75,11 @@ main{
   border-radius: 20px;
   display: flex;
 }
-.introduction{
+#introduction{
   margin: 10px 20px;
 }
 .detail_map_area{
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   width: 50%;
 }
 .map_img_box{
@@ -90,4 +90,4 @@ main{
 }
 .map_img{
   height: 100%;
-}
+} 
