--- a/webapp/assets/css/myPageCare/careMark.css
+++ b/webapp/assets/css/myPageCare/careMark.css
@@ -1,18 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'pretendard-regular';
-}
-@font-face {
-  font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-header, footer {
-  width: 100%;
-  height: 110px;
-  background-color: bisque;
 }
 
 main {
@@ -20,15 +8,8 @@ main {
   height: calc(100vh - 200px);
   display: flex;
 }
-.sidebar img {
-  height: 130px;
-  width: 130px;
-  background-color: #ff80ab;
-  border-radius: 50%;
-  margin: 0 auto 20px;
-  display: block;
-}
-.main_sidebar{
+
+.main_sidebar {
   width: 180px;
   height: 100%;
   background-color: rgb(159, 159, 255);
@@ -36,7 +17,7 @@ main {
   flex-direction: column;
 }
 
-.main_sidebar div {
+.main_sidebar img {
   height: 150px;
   width: 150px;
   background-color: rgb(27, 255, 217);
@@ -46,56 +27,89 @@ main {
 
 .main_sidebar ul li {
   padding: 15px;
+  border-bottom: 1px solid black;
 }
 
-/* ============================ */
+/* ============================= */
 .div_mark{
-  flex:1;
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
-.div_mark .title{
+.div_mark .title {
   font-size: 30px;
   margin: 30px;
 }
-.mark_nav{
-  display: flex;
-  margin: 100px 150px 0px 150px;
-  height: 50px;
-  align-items: center;
-  background-color: rgb(191, 201, 201);
-}
-.mark_nav ul{
-  display: flex;
+form{
   flex: 1;
-  list-style-type: none;
-  background-color: rgb(191, 201, 201);
-  justify-content: space-around;
+  margin: 10px 150px;
 }
-.mark_nav input{
+.arlim{
+  background-color: blueviolet;
+  display: flex;
+  flex-direction: row;
+  margin: 0px 30px;
+  border-radius: 15px;
+  border: 1px solid black;
+  height: 100px;
+}
+.arlim div{
+  background-color: blanchedalmond;
+  width: 20px;
+  height: 20px;
+  margin: 20px;
+}
+.arlim nav{
+  display: flex;
+  align-items: center;
   margin-left: 20px;
 }
-
-.page{
+form .caremodify{
   display: flex;
+  flex-direction: column;
+  background-color: beige;
+  border: 1px solid black;
+}
+.member{
+  border-bottom: 1px solid black;
+}
+.member ul{
+  display: flex;
+}
+.info{
+  display: flex;
+  width: 200px;
+  height: auto;
   justify-content: center;
   align-items: center;
+  font-size: 20px;
+  border-right: 1px solid black;
+  background-color: aqua;
+  padding: 5px 0px;
 }
-.page ul{
+.myinfo {
   display: flex;
-  list-style-type: none;
+  align-items: center;
+  font-size: 20px;
+  margin-left: 20px;
 }
-.page ul li{
-  margin: 10px;
-}
-.div_delete{
+.myinfo ul{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 }
-button {
-  background-color: red;
-  color: white;
-  width: 80px;
+
+input{
+  width: 400px;
   height: 40px;
+  font-size: 20px;
+  margin: 5px 0px;
+}
+button{
+  margin: 10px;
+  background-color: blue;
+  color: white;
+  width: 100px;
+  height: 30px;
   border-radius: 15px;
+  cursor: pointer;
 }
