--- a/webapp/assets/css/myPageCare/carePostDP.css
+++ b/webapp/assets/css/myPageCare/carePostDP.css
@@ -153,7 +153,7 @@ main {
   cursor: pointer;
 }
 
-.modal{
+.modal {
   display: none;
   position: fixed;
   top: 0;
@@ -162,13 +162,15 @@ main {
   justify-content: center;
   align-items: center;
   text-align: center;
-  z-index: 10px;
+  z-index: 10;
   margin-left: 30%;
 }
+
 .modal.open {
   display: flex;
 }
-.modal_box{
+
+.modal_box {
   text-align: center;
   padding: 30px;
   border-radius: 30px;
@@ -176,7 +178,7 @@ main {
   align-items: center;
 }
 
-.modal_buttons{
+.modal_buttons {
   margin-top: 20px;
   display: flex;
   justify-content: center;
@@ -189,12 +191,12 @@ main {
   border-radius: 15px;
 }
 
-#confirmDelete{
+#confirmDelete {
   background-color: #2F52AA;
   color: white;
 }
 
-#cancelDelete{
+#cancelDelete {
   background-color: white;
   border: 2px solid red;
   color: black;
