--- a/webapp/assets/css/myPageCare/carePost.css
+++ b/webapp/assets/css/myPageCare/carePost.css
@@ -1,19 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'pretendard-regular';
-}
-@font-face {
-  font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-header,
-footer {
-  width: 100%;
-  height: 110px;
-  background-color: bisque;
 }
 
 main {
@@ -29,24 +16,16 @@ main {
   display: flex;
   flex-direction: column;
 }
-.sidebar img {
-  height: 130px;
-  width: 130px;
-  background-color: #ff80ab;
-  border-radius: 50%;
-  margin: 0 auto 20px;
-  display: block;
-}
-.main_sidebar div {
+
+.main_sidebar ul li img {
   height: 150px;
   width: 150px;
-  background-color: rgb(27, 255, 217);
   border-radius: 100%;
-  margin: 15px;
 }
 
 .main_sidebar ul li {
   padding: 15px;
+  border-bottom: 1px solid black;
 }
 
 /* ============================= */
@@ -61,54 +40,89 @@ main {
   margin: 30px;
 }
 
+form {
+  width: 100%;
+}
+
+.div_choose {
+  width: 500px;
+}
+
 .div_choose ul {
   display: flex;
   list-style-type: none;
-  padding-left: 150px;
+  padding: 50px 0px 0px 150px;
+}
+
+.div_choose ul li {
+  margin: 10px;
 }
 
 .mark_nav {
   display: flex;
-  margin: 0px 150px 0px 150px;
+  margin: 0px 150px;
   height: 50px;
   align-items: center;
   background-color: rgb(191, 201, 201);
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .mark_nav ul {
   display: flex;
-  flex: 1;
-  list-style-type: none;
-  background-color: rgb(191, 201, 201);
-  justify-content: space-around;
+}
+
+.mark_nav ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .mark_nav input {
-  margin-left: 20px;
+  margin: 0px 30px;
+  width: 30px;
+  height: 30px;
 }
 
-.post_list input {
-  margin-left: 20px;
+.name div {
+  width: 100px;
+  text-align: center;
 }
-.post_list{
+
+.posttitle div {
+  width: 900px;
+  text-align: center;
+}
+
+.day div {
+  width: 200px;
+  text-align: center;
+}
+
+.mark_list {
   display: flex;
-  align-items: center;
   margin: 0px 150px;
   height: 50px;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  border-bottom: 1px solid black;
 }
 
-.post_list ul{
+.mark_list ul {
   display: flex;
-  flex: 1;
-  list-style-type: none;
-  justify-content: space-around;
 }
 
-.post_list a{
-  text-decoration: none;
-  color: black;
+.mark_list ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.mark_list input {
+  margin: 0px 30px;
+  width: 30px;
+  height: 30px;
+}
 
 .page {
   display: flex;
@@ -120,12 +134,16 @@ main {
   display: flex;
   list-style-type: none;
 }
-.page ul li{
+
+.page ul li {
   margin: 10px;
 }
-.div_delete{
+
+.div_delete {
   margin: 0;
+  padding: 0;
 }
+
 button {
   background-color: red;
   color: white;
@@ -134,4 +152,70 @@ button {
   margin-left: 150px;
   border-radius: 15px;
   border: 0px;
+}
+
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 400px;
+  height: auto;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 500;
+  visibility: hidden;
+  opacity: 0;
+  border: 2px solid black;
+  border-radius: 15px;
+}
+
+.modal.open {
+  display: flex;
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.3s ease;
+}
+
+.modal_box {
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  width: 100%;
+  text-align: center;
+}
+.modal_buttons {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-top: 15px;
+}
+
+.modal_buttons button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  padding: 10px 24px;
+  cursor: pointer;
+  border-radius: 6px;
+  font-size: 14px;
+  font-weight: bold;
+  border: none;
+  transition: background-color 0.2s ease, transform 0.1s ease;
+  min-width: 70px;   
+}
+
+#confirmDelete {
+  background-color: #2F52AA;
+  color: white;
+  margin-left: 10px;
+}
+
+#cancelDelete {
+  background-color: white;
+  border: 2px solid red;
+  color: black;
 }
