--- a/webapp/assets/css/myPageCare/careReferenceDP.css
+++ b/webapp/assets/css/myPageCare/careReferenceDP.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'pretendard-regular';
+  font-family: 'Pretendard-Regular';
 }
 @font-face {
   font-family: 'Pretendard-Regular';
@@ -9,20 +9,14 @@
   font-weight: 400;
   font-style: normal;
 }
+
 header,
 footer {
   width: 100%;
   height: 110px;
   background-color: bisque;
 }
-.sidebar img {
-  height: 130px;
-  width: 130px;
-  background-color: #ff80ab;
-  border-radius: 50%;
-  margin: 0 auto 20px;
-  display: block;
-}
+
 main {
   width: 100%;
   height: calc(100vh - 200px);
@@ -36,7 +30,14 @@ main {
   display: flex;
   flex-direction: column;
 }
-
+.main_sidebar img {
+  height: 130px;
+  width: 130px;
+  background-color: #ff80ab;
+  border-radius: 50%;
+  margin: 0 auto 20px;
+  display: block;
+}
 .main_sidebar div {
   height: 150px;
   width: 150px;
@@ -44,158 +45,169 @@ main {
   border-radius: 100%;
   margin: 15px;
 }
-
 .main_sidebar ul li {
   padding: 15px;
 }
 
-/* ------------------*/
-
-
-.reference_dp{
+.reference_dp {
   flex: 1;
   padding: 40px 100px;
 }
 
-.title h2{
+.title {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.title h2 {
   padding: 5px;
   font-size: 30px;
-  border: 2px solid black;
+  border: 2px solid #000;
+}
+.title input[type="text"] {
+  width: 100%;
+  height: 56px;
+  box-sizing: border-box;
+  padding: 0 16px;
+  font-size: 20px;
+  border: 2px solid #000;
+  border-radius: 10px;
+  outline: none;
 }
 
-.reference_info{
+.reference_info {
   display: flex;
+  gap: 12px;
   padding: 5px;
   background-color: aqua;
   font-size: 24px;
-  border: 2px solid black;
+  border: 2px solid #000;
 }
-
-.reference_info span{
+.reference_info span {
   display: block;
 }
 
-.reference_content{
-  margin-top: 10px;
-  padding: 5px;
-  background-color: #fdfdfd;
-  border: 2px solid black;
-  height: auto;
-  width: auto;
-  height: 500px;
+.re_post_content,
+.reference_content {
+  margin-top: 14px;
+  padding: 0;
+  border: 0;
+  min-height: 300px;
+}
+#contentInput {
+  width: 100%;
+  min-height: 500px;
+  box-sizing: border-box;
+  padding: 16px;
+  font-size: 18px;
+  line-height: 1.6;
+  border: 2px solid #000;
+  border-radius: 10px;
+  outline: none;
+  resize: vertical;
 }
 
 .buttons {
   display: flex;
-  justify-content: right;
-  gap: 5px;
-  margin: 5px 0px 5px; 
+  justify-content: flex-end;
+  gap: 10px;
+  margin: 14px 0;
 }
-
-.buttons button{
-  width: 100px;
-  height: 50px;
-  border-radius: 15px;
+.buttons a,
+.buttons button {
+  min-width: 120px;
+  height: 48px;
+  padding: 0 18px;
+  box-sizing: border-box;
+  border-radius: 12px;
+  font-size: 16px;
+  font-weight: 600;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  text-decoration: none;
   cursor: pointer;
 }
-
-.btn_cancle{
-  background-color: #FF0000;
-  color: white;
+.btn_list {
+  background: #f1f1f1;
+  color: #222;
+}
+.btn_cancle {
+  background: #FF4D4F;
+  color: #fff;
+}
+.btn_compelete {
+  background: #2F52AA;
+  color: #fff;
 }
 
-.btn_compelete{
-  background-color: #2F52AA;
-  color: white;
-}
-
-.reply{
-  border: 2px solid black;
+.reply {
+  border: 2px solid #000;
 }
 .comment {
   padding: 5px;
-  border: 2px solid black;
+  border: 2px solid #000;
 }
-
-.reply h4{
+.reply h4 {
   padding: 10px;
 }
-
-.author{
-  font-weight: bold;
+.author {
   display: block;
 }
-
-.cmt_content{
+.cmt_content {
   margin: 5px 5px 5px 10px;
 }
-
-.date{
+.date {
   display: block;
   text-align: right;
 }
 
-.comments form text{
-  height: 60px;
-  padding: 10px;
-}
-.comments input{
-  justify-content: right;
-  align-items: right;
-  width: 800px;
-  text-align: center;
-}
-.btn_compelete {
-  padding: 10px 20px;
-  background-color: #2F52AA;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-.modal{
-  /* display: none; */
+.modal {
   position: fixed;
-  top: 0;
-  width: 900px;
-  height: 400px;
+  inset: 0;
+  display: none;
+  align-items: flex-start;
   justify-content: center;
-  align-items: center;
-  text-align: center;
-  z-index: 10px;
-  margin-left: 30%;
+  padding-top: 0;
+  background: rgba(0,0,0,.45);
+  z-index: 3000;
+}
+.modal.open {
+  display: flex;
 }
 
-.modal_box{
-  background-color: aqua;
+.modal_box {
+  background: #fff;
+  width: min(640px, 92vw);
+  box-sizing: border-box;
+  border-radius: 18px;
+  padding: 28px 22px;
+  box-shadow: 0 12px 40px rgba(0,0,0,.2);
   text-align: center;
-  padding: 30px;
-  border-radius: 30px;
-  justify-content: center;
-  align-items: center;
+  margin-top: 0px;
 }
 
-.modal_buttons{
+.modal_buttons {
   margin-top: 20px;
   display: flex;
   justify-content: center;
   gap: 20px;
 }
-
 .modal_buttons button {
-  padding: 8px 20px;
+  padding: 10px 24px;
   cursor: pointer;
-  border-radius: 15px;
+  border-radius: 12px;
+  border: 0;
+  font-weight: 600;
 }
-
-#confirmDelete{
+#confirmDelete,
+#check {
   background-color: #2F52AA;
-  color: white;
+  color: #fff;
 }
-
-#cancelDelete{
-  background-color: white;
+#cancelDelete {
+  background-color: #fff;
   border: 2px solid red;
-  color: black;
+  color: #000;
 }
