--- a/webapp/assets/css/post/postDetail.css
+++ b/webapp/assets/css/post/postDetail.css
@@ -25,6 +25,7 @@ form {
   font-size: 24px;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
+  background-color: rgb(155, 155, 155);
 }
 .post_info{
   display: flex;
@@ -128,4 +129,4 @@ form {
   height: 30px;
   width: 100px;
   border-left: 1px solid black;
-}
+} 
