--- a/webapp/assets/css/post/postModify.css
+++ b/webapp/assets/css/post/postModify.css
@@ -18,44 +18,72 @@ form {
   display: flex;
   flex-direction: column;
 }
-.title{
-  height: 40px;
+.post_title {
   display: flex;
-  align-items: center;
-  border: 1px solid black;
-  margin-bottom: 10px;
+  flex-direction: column;
 }
-.title input{
+
+.post_name {
+  font-size: 24px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: rgb(155, 155, 155);
+}
+
+.post_info {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(155, 155, 155);
+  border-bottom: 1px solid black;
+
+}
+
+.post_info li {
+  width: 150px;
+  margin-left: 10px;
+}
+
+.post_member,
+.post_day,
+.post_view {
+  display: flex;
   flex: 1;
-  font-size: 20px;
+  background-color: rgb(255, 255, 255);
 }
-.write{
-  height: 500px;
+
+.post_member div,
+.post_day div,
+.post_view div {
+  margin-left: 10px;
+}
+.api{
+  height: 40px;
+}
+.input{
   border: 1px solid black;
-  display: flex;
-  width: auto;
-  white-space: normal;
+  height: 500px;
 }
-.write input{
+input{
   width: 100%;
   height: 40px;
-  line-height: 500px;
   font-size: 20px;
-
 }
 
-.button{
+
+.button {
   display: flex;
   flex-direction: row;
   justify-content: end;
   margin: 10px;
 }
-.list{
+
+.list {
   width: 100px;
   height: 40px;
   margin-left: 20px;
   border: 1px solid black;
 }
+
 .button_write {
   width: 100px;
   height: 40px;
