--- a/webapp/assets/css/login/modifyPassword.css
+++ b/webapp/assets/css/login/modifyPassword.css
@@ -50,10 +50,9 @@
 }
 .box_input,
 .box_re,
-.box_next> p {
+.box_next > p {
   font-size: 16px;
 }
-
 
 input {
   border: 2px solid black;
@@ -67,8 +66,6 @@ input {
   width: 400px;
 }
 
-
-
 .box_re > button {
   background-color: #2f52aa;
   color: white;
@@ -76,9 +73,9 @@ input {
   border-radius: 8px;
 }
 
-.box_next{
-      position: relative;
-    bottom: -100px;
+.box_next {
+  position: relative;
+  bottom: -100px;
 }
 
 .box_next > button {
@@ -86,5 +83,20 @@ input {
   background-color: #1d3266;
   color: white;
   border-radius: 8px;
+}
+.error_pw_check_msg,
+.error_pw_msg {
+  padding-left: 200px;
+  font-size: 14px;
+  color: red;
+}
 
+.correct_pw {
+  padding-left: 200px;
+  font-size: 14px;
+}
+
+.box_error_pw,
+.box_re_error {
+  display: none;
 }
