--- a/webapp/assets/css/sign/signNormal.css
+++ b/webapp/assets/css/sign/signNormal.css
@@ -19,7 +19,7 @@ button {
 .sign_form {
   display: flex;
   flex-direction: column;
-  gap: 36px;
+  /* gap: 36px; */
   padding: 12px 0px;
 }
 
@@ -33,7 +33,7 @@ button {
   /* justify-content: center; */
 }
 
-.sign > form > div {
+.sign > form > .sign_box {
   /* border: 1px solid black; */
   width: 100%;
   /* height: 100px; */
@@ -61,6 +61,7 @@ label > input {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 12px;
 }
 
 .sign_level {
@@ -132,4 +133,46 @@ label > input {
 .sign_btn > button {
   padding: 8px 100px;
   border-radius: 30px;
+}
+
+.id_err_box {
+  display: none;
+  /* display: flex; */
+  flex-direction: column;
+  width: 100%;
+  font-size: 14px;
+  gap: 0px;
+  /* border: 1px solid black;
+  justify-content: flex-start; */
+  padding-left: 140px;
+}
+
+.err_id_msg {
+  color: red;
+}
+
+.box_error_pw,
+.box_re_error {
+  display: none;
+}
+
+.box_error_pw {
+  padding-left: 140px;
+}
+
+.box_re_error {
+  padding-left: 140px;
+}
+
+.error_pw_check_msg {
+  color: red;
+}
+
+.box_error_email {
+  display: none;
+  padding-left: 140px;
+}
+
+.error_email_msg {
+  color: red;
 }
