--- a/webapp/assets/css/login/findPassword.css
+++ b/webapp/assets/css/login/findPassword.css
@@ -38,7 +38,14 @@
   gap: 36px;
 }
 
-.box_id,
+.box_id {
+  display: flex;
+  /* border: 1px solid black; */
+  gap: 12px;
+  align-items: center;
+  width: 110%;
+  justify-content: center;
+}
 .box_name,
 .box_phone,
 .box_author,
@@ -60,7 +67,7 @@
 
 .box_name {
   position: relative;
-    left: -80px;
+  left: -80px;
 }
 
 #member_care,
@@ -124,4 +131,43 @@ input {
   background-color: #1d3266;
   color: white;
   border-radius: 8px;
+}
+
+.alert {
+  display: none;
+}
+.error_box,
+.error_box_msg {
+  display: none;
+  padding-left: 77px;
+}
+
+.error_phone,
+.error_msg {
+  color: red;
+  font-size: 12px;
+  /* border: 1px solid black; */
+}
+.okay_msg {
+  font-size: 12px;
+}
+
+.check_id {
+  padding-left: 79px;
+  display: none;
+}
+.correct_id,
+.error_id {
+  font-size: 14px;
+}
+
+.check_id_btn {
+  background-color: #1d3266;
+  color: white;
+  padding: 4px 10px;
+  border-radius: 14px;
+}
+
+.error_id {
+  color: red;
 }
