--- a/webapp/assets/css/myPageCare/careMessage.css
+++ b/webapp/assets/css/myPageCare/careMessage.css
@@ -1,59 +1,31 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'pretendard-regular';
-}
-
-@font-face {
-  font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-
-body {
-  background-color: #ffffff;
 }
 
 main {
+  width: 100%;
+  height: calc(100vh - 200px);
   display: flex;
-  min-height: calc(100vh - 220px);
 }
-.sidebar img {
-  height: 130px;
-  width: 130px;
-  background-color: #ff80ab;
-  border-radius: 50%;
-  margin: 0 auto 20px;
-  display: block;
-}
+
 .sidebar {
   width: 180px;
-  background-color: #2f4db1;
-  color: white;
-  padding: 20px 0;
+  height: 100%;
+  background-color: rgb(159, 159, 255);
+  display: flex;
+  flex-direction: column;
 }
 
-.sidebar img {
-  height: 130px;
-  width: 130px;
-  background-color: #ff80ab;
-  border-radius: 50%;
-  margin: 0 auto 20px;
-  display: block;
+.sidebar ul li img {
+  height: 150px;
+  width: 150px;
+  border-radius: 100%;
 }
 
-.sidebar ul {
-  list-style: none;
-  padding-left: 0;
-}
-
-.sidebar li {
-  padding: 12px 20px;
-  font-size: 15px;
-  cursor: pointer;
-  color: white;
-  text-decoration-line: none;
+.sidebar ul li {
+  padding: 15px;
+  border-bottom: 1px solid black;
 }
 
 /* ============================= */
@@ -68,32 +40,93 @@ main {
   margin: 30px;
 }
 
-.div_choose ul{
+form {
+  width: 100%;
+}
+
+.div_choose {
+  width: 500px;
+}
+
+.div_choose ul {
   display: flex;
   list-style-type: none;
-  padding-left: 150px;
+  padding: 50px 0px 0px 150px;
 }
-.div_choose ul li{
+
+.div_choose ul li {
   margin: 10px;
 }
+
 .mark_nav {
   display: flex;
-  margin: 0px 150px 0px 150px;
+  margin: 0px 150px;
   height: 50px;
   align-items: center;
   background-color: rgb(191, 201, 201);
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .mark_nav ul {
   display: flex;
-  flex: 1;
-  list-style-type: none;
-  background-color: rgb(191, 201, 201);
-  justify-content: space-around;
+}
+
+.mark_nav ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .mark_nav input {
-  margin-left: 20px;
+  margin: 0px 30px;
+  width: 30px;
+  height: 30px;
+}
+
+.mark_list {
+  display: flex;
+  margin: 0px 150px;
+  height: 50px;
+  align-items: center;
+  background-color: rgb(215, 238, 238);
+  border-bottom: 1px solid black;
+}
+
+.mark_list ul {
+  display: flex;
+}
+
+.mark_list ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mark_list input {
+  margin: 0px 30px;
+  width: 30px;
+  height: 30px;
+}
+
+.name div {
+  width: 100px;
+  text-align: center;
+}
+
+.messeagetitle div {
+  width: 800px;
+  text-align: center;
+}
+
+.day div {
+  width: 200px;
+  text-align: center;
+}
+
+.read div {
+  width: 200px;
+  text-align: center;
 }
 
 .page {
@@ -106,13 +139,18 @@ main {
   display: flex;
   list-style-type: none;
 }
-.page ul li{
+
+.page ul li {
   margin: 10px;
+  cursor: pointer;
+
 }
-.div_delete{
+
+.div_delete {
   margin: 0;
   padding: 0;
 }
+
 button {
   background-color: red;
   color: white;
@@ -121,170 +159,4 @@ button {
   margin-left: 150px;
   border-radius: 15px;
   border: 0px;
-}
-
-
-
-
-
-.modal_bg .modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 500;
-}
-
-
-.modal_box {
-  background-color: white;
-  width: 500px;
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 5px 20px rgba(0,0,0,0.2);
-  position: relative;
-}
-
-.modal_read {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.modal_title {
-  font-size: 18px;
-}
-
-.modal-content {
-  position: fixed;
-  top: 60%;
-}
-
-.modal_bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 999;
-}
-
-.modal_close {
-  font-size: 24px;
-  cursor: pointer;
-}
-
-.sender_info {
-  font-size: 14px;
-  color: #333;
-}
-.sender_info strong .sender_id {
-  font-weight: 500;
-}
-
-.message_content {
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 12px;
-  background-color: #f9f9f9;
-  font-size: 14px;
-  min-height: 100px;
-  white-space: pre-line;
-}
-
-.modal_button .confirm_buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  margin-top: 20px;
-}
-.confirm_buttons {
-  margin-top: 0;  
-}
-.btn_reply {
-  background-color: navy;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 14px;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.btn_delete .btn_cancel {
-  background-color: white;
-  color: red;
-  border: 1px solid red;
-  border-radius: 5px;
-  font-size: 14px;
-  padding: 10px 20px;
-  cursor: pointer;
-  font-weight: bold;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  display: flex;
-}
-
-.btn_confirm {
-  background-color: #2f4db1;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 14px;
-  padding: 10px 20px;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-.modal-content {
-  background-color: #fff;
-  padding: 40px;
-  border: 1px solid #ccc;
-  width: 400px;
-  border-radius: 20px;
-  text-align: center;
-  position: relative;
-}
-
-.modal-content button {
-  margin-top: 20px;
-  padding: 10px 30px;
-  border: none;
-  border-radius: 10px;
-  background-color: #001860;
-  color: white;
-  cursor: pointer;
-}
-
-#sendMsgModal .btn_send {
-  background-color: #0011a8;
-  color: white;
-  padding: 10px 24px;
-  border-radius: 8px;
-  border: none;
-  font-weight: bold;
-  font-size: 14px;
-  cursor: pointer;
-}
-
-#sendMsgModal .btn_cancel {
-  background-color: white;
-  color: red;
-  padding: 10px 24px;
-  border: 1px solid red;
-  border-radius: 8px;
-  font-weight: bold;
-  font-size: 14px;
-  cursor: pointer;
 }
