--- a/webapp/assets/css/myPageCare/carePwCheck.css
+++ b/webapp/assets/css/myPageCare/carePwCheck.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'pretendard-regular';
+  font-family: 'Pretendard-Regular';
 }
 @font-face {
   font-family: 'Pretendard-Regular';
@@ -9,45 +9,34 @@
   font-weight: 400;
   font-style: normal;
 }
-header, footer {
-  width: 100%;
-  height: 110px;
-  background-color: black;
-}
-
 main {
   width: 100%;
   height: calc(100vh - 200px);
   display: flex;
+  color: #ffffff;
 }
-.sidebar img {
-  height: 130px;
-  width: 130px;
-  background-color: #ff80ab;
-  border-radius: 50%;
-  margin: 0 auto 20px;
-  display: block;
-}
-nav {
+
+.main_sidebar {
   width: 180px;
   height: 100%;
-  background-color: rgb(159, 159, 255);
+  background-color: #2f4db1;
   display: flex;
   flex-direction: column;
+  color: white;
 }
 
-.main_sidebar div{
+.main_sidebar ul li img {
   height: 150px;
   width: 150px;
-  background-color: rgb(27, 255, 217);
   border-radius: 100%;
-  margin: 15px;
 }
 
-nav ul li {
+.main_sidebar ul li {
   padding: 15px;
+  color: white;
 }
-/* ======================== */
+
+/* ============================= */
 
 .pw_check{
   flex: 1;
@@ -55,7 +44,6 @@ nav ul li {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid black;
 }
 
 input{
@@ -63,6 +51,7 @@ input{
   height: 50px;
   margin-left: 20px;
   font-size: 20px;
+  border: 1px solid black;
 }
 button{
   width: 100px;
